--- a/www/index.html
+++ b/www/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta http-equiv="Content-Security-Policy" content="default-src * data:; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
-    <link rel="stylesheet" href="components/loader.css">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="components/loader.js"></script>
-    <script src="js/ncmb-2.1.0.min.js"></script>
-    <script>
-        // Add your code here
-    </script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta http-equiv="Content-Security-Policy" content="default-src * data:; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
+  <link rel="stylesheet" href="components/loader.css">
+  <link rel="stylesheet" href="css/style.css">
+  <script src="components/loader.js"></script>
+  <script src="js/ncmb-2.1.0.min.js"></script>
+  <script>
+    // Add your code here
+  </script>
 </head>
 <body>
-
-    <p>App template using NIFTY Cloud mobile backend</p>
-
+  <section class="center">
+    <h1 class="pageTitle">Sign Up / Login</h1>
+    <form>
+      <input type="text" id="username" class="inputField" placeholder="User Name">
+      <input type="password" id="password" class="inputField" placeholder="Password">
+      <input class="btn submitBtn" type="submit" value="Sign Up / Login">
+    </form>
+  </section>
 </body>
 </html>
