--- a/www/index.html
+++ b/www/index.html
@@ -8,14 +8,13 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="components/loader.js"></script>
   <script src="js/ncmb-2.1.0.min.js"></script>
-  <script>
-    // Add your code here
-  </script>
+  <script src="js/conf.js"></script>
+  <script src="js/main.js"></script>
 </head>
 <body>
   <section class="center">
     <h1 class="pageTitle">Sign Up / Login</h1>
-    <form>
+    <form id="js-login">
       <input type="text" id="username" class="inputField" placeholder="User Name">
       <input type="password" id="password" class="inputField" placeholder="Password">
       <input class="btn submitBtn" type="submit" value="Sign Up / Login">
