#7 ログイン後の画面作成, jsの処理をページごとに分ける

--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
   <script src="js/conf.js"></script>
   <script src="js/main.js"></script>
 </head>
-<body>
+<body id="login" data-key="login">
   <section class="center">
     <h1 class="pageTitle">Sign Up / Login</h1>
     <form id="js-login">
