--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,8 @@
   <script src="js/conf.js"></script>
   <script src="js/main.js"></script>
 </head>
-<body id="login" data-key="login">
+<body id="login">
+  <input type="hidden" id="js-pagekey" value="login">
   <section class="center">
     <h1 class="pageTitle">Sign Up / Login</h1>
     <form id="js-login">
