#9 Game Start Page

--- a/www/game.html
+++ b/www/game.html
@@ -14,9 +14,12 @@
 <body id="game">
   <input type="hidden" id="js-pagekey" value="game">
   <header class="header">
-    <div id="username"></div>
+    <nav>
+      <div id="username"></div>
+    </nav>
   </header>
   <section id="main" class="center" role="main">
+    <canvas id="mycanvas" width="300" height="300"></canvas>
   </section>
 </body>
 </html>
