#16, #17 Save Score & show ranking list

--- a/www/game.html
+++ b/www/game.html
@@ -20,6 +20,10 @@
   </header>
   <section id="main" class="center" role="main">
     <canvas id="mycanvas" width="300" height="300"></canvas>
+    <div class="ranking">
+      <h1 class="heading">Ranking</h1>
+      <ul id="js-ranking" class="rankingList"></ul>
+    </div>
   </section>
 </body>
 </html>
