ゲームを3カウント制に変更

--- a/www/game.html
+++ b/www/game.html
@@ -19,10 +19,19 @@
     </nav>
   </header>
   <section id="main" class="center" role="main">
+    <table id="js-scores" class="table scoresTable">
+      <tbody>
+        <tr>
+          <td class="n1">1回目:</td>
+          <td class="n2">2回目:</td>
+          <td class="n3">3回目:</td>
+        </tr>
+      </tbody>
+    </table>
     <canvas id="mycanvas" width="300" height="300"></canvas>
     <div class="ranking">
       <h1 class="heading">Ranking</h1>
-      <table class="rankingTable">
+      <table class="table rankingTable">
         <thead>
           <tr>
             <th class="rank">Rank</th>
