スコア表示を修正

--- a/www/game.html
+++ b/www/game.html
@@ -22,9 +22,9 @@
     <table id="js-scores" class="table scoresTable">
       <tbody>
         <tr>
-          <td class="n1">1回目:</td>
-          <td class="n2">2回目:</td>
-          <td class="n3">3回目:</td>
+          <td class="cell cellFirst">1回目: <span class="score1 js-score"></span></td>
+          <td class="cell">2回目: <span class="score2 js-score"></span></td>
+          <td class="cell cellLast">3回目: <span class="score3 js-score"></span></td>
         </tr>
       </tbody>
     </table>
